# mcp-database-read-prototype

./: .env.example  .gitignore  CLAUDE.md  README.md  database_read.py  pyproject.toml  requirements.txt  test_smoke.py
.github/workflows/: ci.yml
tests/: conftest.py  test_env_discovery.py  test_integration.py  test_jsonify.py  test_safety_invariants.py  test_sql_validation.py  test_startup.py  test_tools_unit.py
